--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,12 +6,12 @@ interface Props {
   description?: string;
 }
 
-const { title = "Rishikesh S - Portfolio", description = "My Portfolio" } =
+const { title = "Michael Navarro - Portfolio", description = "Mi Portfolio" } =
   Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
